--- a/templates/base.html.hbs
+++ b/templates/base.html.hbs
@@ -23,12 +23,9 @@
     <body>
         <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
             <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">Albatross</a>
-            <input class="form-control form-control-dark w-100" type="text" placeholder="{{search_placeholder}}" aria-label="Search">
-            <ul class="navbar-nav px-3">
-                <li class="nav-item text-nowrap">
-                    <a class="nav-link" href="#">Sign out</a>
-                </li>
-            </ul>
+            <form action="/search">
+                <input class="form-control form-control-dark w-100" type="text" placeholder="{{search_placeholder}}" aria-label="Search" name="q">
+            </form>
         </nav>
 
         <div class="container-fluid">
