--- a/templates/base.html.hbs
+++ b/templates/base.html.hbs
@@ -1,4 +1,15 @@
 <!doctype html>
+{{#if debug_content}}
+<!--
+
+This Albatross Explorer is running on network: {{network_name}}
+
+This page was generated with the following content:
+
+{{debug_content}}
+
+-->
+{{/if}}
 <html>
     <head>
         <title>
@@ -14,7 +25,8 @@
         <meta name="author" content="Janosch Gräf <janosch@nimiq.com>">
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
         <link href="/static/css/dashboard.css" rel="stylesheet">
-        <link rel="stylesheet" href="/static/css/custom.css"></link>
+        <link rel="stylesheet" href="/static/css/custom.css">
+        <link rel='shortcut icon' type='image/x-icon' href='/static/favicon.ico'>
 
         {{#> head-block}}
             {{!-- Custom <head> content per page could be added. --}}
@@ -34,9 +46,15 @@
                     <div class="sidebar-sticky">
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <a class="nav-link" href="/blockchain-info">
+                                <a class="nav-link" href="/blockchain">
                                     <span data-feather="file"></span>
                                     Blockchain
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/accounts">
+                                    <span data-feather="file"></span>
+                                    Accounts
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -83,15 +101,15 @@
         </footer>
 
         <!-- Feather icons -->
-        <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+        <script src="/static/js/feather.min.js"></script>
         <script>
             feather.replace()
         </script>
 
         <!-- Bootstrap JS plugins -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="/static/js/jquery-3.3.1.slim.min.js"></script>
+        <script src="/static/js/popper.min.js"></script>
+        <script src="/static/js/bootstrap.min.js"></script>
 
         {{#> scripts-block}}
             {{!-- Custom scripts per page can be added. --}}
